  * goto definition: if executed on an import statement, now searching file through import paths
  * fixed lexer to not treat !in_x as an operator followed by an identifier "_x"
  * fixed regression: import expansions only listed folders, no modules
  * fixed custom command: project would not restore if multiple commands are used
  * project properties: added output type DLL for easier switching between DMD and GDC
  * project properties: added subsystem option, use "not set" if you have to specify a specific windows version
  * fixed underlining syntax errors shows only first error
  * fixed option "Show expansions when" not saving state "writing an identifier"
  * added icon for disabled project item (tool set to "None")
  * version highlighting now supports versions DigitalMars/GNU and Win32/Win64
  * fixed building static lib with GDC and a name in the library file name

unreleased Version 0.3.33

  * debugger project settings now stored in solution options file, not in project file
  * regression: clean project failed, now deletes files given by wildcard recursively
  * token replace: fixed freeze when trying to replace no tokens
  * cv2pdb: new version 0.25 that allows specifying a different pdb file being embedded 
    into the binary and supports VS11
  * cv2pdb: exposed command line options in the project options
  * intellisense tool tip now shows enumerator value
  * moved parser and semantic analysis into another process
  * GDC: user specified libraries are now appended after the source files to the command 
    line to avoid linker problems
  * improved performance when indenting muliple lines of code
  * remove project item: now asks whether file on disk should also be removed
  * parser: added support for linkage specification inside alias
  * version highlighting now supports the "version(V):" syntax
  * tweaked vsi2d to also convert the Windos 8 SDK and VS2011 SDK
  * added wizard to create packages from the new item dialog